--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,152 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: Developer quickstart
+subtitle: Learn how to make your first ElevenLabs API request.
 ---
 
-## Get started in three steps
+The ElevenLabs API provides a simple interface to state-of-the-art audio [models](/docs/models) and [features](/docs/api-reference/introduction). Follow this guide to learn how to create lifelike speech with our Text to Speech API. See the [developer guides](/docs/quickstart#explore-our-developer-guides) for more examples with our other products.
 
-Get your documentation site running locally and make your first customization.
+## Using the Text to Speech API
 
-### Step 1: Set up your local environment
+<Steps>
+    <Step title="Create an API key">
+      [Create an API key in the dashboard here](https://elevenlabs.io/app/settings/api-keys), which you’ll use to securely [access the API](/docs/api-reference/authentication).
+      
+      Store the key as a managed secret and pass it to the SDKs either as a environment variable via an `.env` file, or directly in your app’s configuration depending on your preference.
+      
+      ```js title=".env"
+      ELEVENLABS_API_KEY=<your_api_key_here>
+      ```
+      
+    </Step>
+    <Step title="Install the SDK">
+      We'll also use the `dotenv` library to load our API key from an environment variable.
+      
+      <CodeBlocks>
+          ```python
+          pip install elevenlabs
+          pip install python-dotenv
+          ```
+      
+          ```typescript
+          npm install @elevenlabs/elevenlabs-js
+          npm install dotenv
+          ```
+      
+      </CodeBlocks>
+      
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+      <Note>
+        To play the audio through your speakers, you may be prompted to install [MPV](https://mpv.io/)
+      and/or [ffmpeg](https://ffmpeg.org/).
+      </Note>
+    </Step>
+    <Step title="Make your first request">
+      Create a new file named `example.py` or `example.mts`, depending on your language of choice and add the following code:
+       {/* This snippet was auto-generated */}
+       <CodeBlocks>
+       ```python
+       from dotenv import load_dotenv
+       from elevenlabs.client import ElevenLabs
+       from elevenlabs import play
+       import os
+       
+       load_dotenv()
+       
+       elevenlabs = ElevenLabs(
+         api_key=os.getenv("ELEVENLABS_API_KEY"),
+       )
+       
+       audio = elevenlabs.text_to_speech.convert(
+           text="The first move is what sets everything in motion.",
+           voice_id="JBFqnCBsd6RMkjVDRZzb",
+           model_id="eleven_multilingual_v2",
+           output_format="mp3_44100_128",
+       )
+       
+       play(audio)
+       
+       ```
+       
+       ```typescript
+       import { ElevenLabsClient, play } from '@elevenlabs/elevenlabs-js';
+       import 'dotenv/config';
+       
+       const elevenlabs = new ElevenLabsClient();
+       const audio = await elevenlabs.textToSpeech.convert('JBFqnCBsd6RMkjVDRZzb', {
+         text: 'The first move is what sets everything in motion.',
+         modelId: 'eleven_multilingual_v2',
+         outputFormat: 'mp3_44100_128',
+       });
+       
+       await play(audio);
+       
+       ```
+       
+       </CodeBlocks>
+    </Step>
+    <Step title="Run the code">
+        <CodeBlocks>
+            ```python
+            python example.py
+            ```
 
-### Step 2: Deploy your changes
+            ```typescript
+            npx tsx example.mts
+            ```
+        </CodeBlocks>
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+        You should hear the audio play through your speakers.
+    </Step>
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+</Steps>
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+## Explore our developer guides
 
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
+Now that you've made your first ElevenLabs API request, you can explore the other products that ElevenLabs offers.
 
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card
+    title="Speech to Text"
+    icon="duotone pen-clip"
+    href="/docs/cookbooks/speech-to-text/quickstart"
+  >
+    Convert spoken audio into text
+  </Card>
+  <Card
+    title="Conversational AI"
+    icon="duotone comments"
+    href="/docs/cookbooks/conversational-ai/quickstart"
+  >
+    Deploy conversational voice agents
+  </Card>
+  <Card
+    title="Voice cloning"
+    icon="duotone clone"
+    href="/docs/cookbooks/voices/instant-voice-cloning"
+  >
+    Clone a voice
+  </Card>
+  <Card title="Sound effects" icon="duotone explosion" href="/docs/cookbooks/sound-effects">
+    Generate sound effects from text
+  </Card>
+  <Card title="Voice Changer" icon="duotone message-pen" href="/docs/cookbooks/voice-changer">
+    Transform the voice of an audio file
+  </Card>
+  <Card title="Voice Isolator" icon="duotone ear" href="/docs/cookbooks/voice-isolator">
+    Isolate background noise from audio
+  </Card>
+  <Card title="Voice Design" icon="duotone paint-brush" href="/docs/cookbooks/voices/voice-design">
+    Generate voices from a single text prompt
+  </Card>
+  <Card title="Dubbing" icon="duotone language" href="/docs/cookbooks/dubbing">
+    Dub audio/video from one language to another
+  </Card>
+  <Card
+    title="Forced Alignment"
+    icon="duotone objects-align-left"
+    href="/docs/cookbooks/forced-alignment"
+  >
+    Generate time-aligned transcripts for audio
+  </Card>
 </CardGroup>
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
