--- a/index.mdx
+++ b/index.mdx
@@ -61,7 +61,7 @@ hide-nav-links: true
 ## Meet the models
 
 <CardGroup cols={2} rows={2}>
-  <Card title={<div className="flex items-start gap-2"><div>Eleven v3</div><div><img src="file:176212f7-5ef0-498d-92b4-bc69b87d1753" alt="Alpha" /></div></div>} href="/docs/models#eleven-v3-alpha">
+  <Card title={<div className="flex items-start gap-2"><div>Eleven v3</div><div><img src="/images/alpha.svg" alt="Alpha" /></div></div>} href="/docs/models#eleven-v3-alpha">
     Our most emotionally rich, expressive speech synthesis model
     <div className="mt-4 space-y-2">
       <div className="text-sm">Dramatic delivery and performance</div>
