--- a/index.mdx
+++ b/index.mdx
@@ -213,7 +213,7 @@ hide-nav-links: true
     </div>
     <div className="flex items-center justify-center">
       <img
-        src="file:2bdb4805-f47e-430d-9e35-0d0eebc40b2d"
+        src="/images/voice-library.webp"
         alt="Voice library"
         style={{ pointerEvents: "none", width: "200px" }}
       />
