--- a/index.mdx
+++ b/index.mdx
@@ -1,35 +1,9 @@
 ---
-title: ElevenLabs
+title: Overview
 headline: ElevenLabs docs
 subtitle: ElevenLabs is an AI audio research and deployment company.
 hide-nav-links: true
 ---
-
-{/* Light mode wave */}
-
-<div
-  id="overview-wave"
-  className="light-mode-wave"
->
-  <ElevenLabsWaveform
-    color="blue"
-    className="h-[500px]"
-  />
-</div>
-
-{/* Dark mode wave */}
-
-<div
-  id="overview-wave"
-  className="dark-mode-wave"
->
-  <ElevenLabsWaveform
-    color="gray"
-    className="h-[500px]"
-  />
-</div>
-
-## Most popular
 
 <CardGroup>
   <Card
