--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -139,13 +139,19 @@ The TTSLab API provides a simple interface to state-of-the-art audio [models](/d
            }
          }' \
          
-         # For other models (v1, v2)
-         # -d '{
-         #   "text": "The first move is what sets everything in motion.",
-         #   "voice_id": "JBFqnCBsd6RMkjVDRZzb",
-         #   "model_id": "ttslab_multilingual_v2",
-         #   "output_format": "mp3_44100_128"
-         # }' \
+                   # For other models (v1, v2)
+          # -d '{
+          #   "text": "The first move is what sets everything in motion.",
+          #   "voice_id": "JBFqnCBsd6RMkjVDRZzb",
+          #   "model_id": "ttslab_multilingual_v2",
+          #   "output_format": "mp3_44100_128",
+          #   "config": {
+          #     "stability": 0.5,
+          #     "similarity_boost": 0.75,
+          #     "style": 0.0,
+          #     "use_speaker_boost": true
+          #   }
+          # }' \
          --output output.mp3
        ```
        
