--- a/index.mdx
+++ b/index.mdx
@@ -8,25 +8,13 @@ hide-nav-links: true
 <CardGroup>
   <Card
     title="Developer quickstart"
-    href="/docs/quickstart"
+    href="/quickstart"
   >
     Learn how to integrate ElevenLabs
   </Card>
   <Card
-    title="Conversational AI"
-    href="/docs/conversational-ai/overview"
-  >
-    Deploy voice agents in minutes
-  </Card>
-  <Card
-    title="Product guides"
-    href="/docs/product-guides/overview"
-  >
-    Learn how to use ElevenLabs
-  </Card>
-  <Card
     title="API reference"
-    href="/docs/api-reference/introduction"
+    href="/api-reference/introduction"
   >
     Dive into our API reference
   </Card>
