--- a/api-reference/endpoint/models.mdx
+++ b/api-reference/endpoint/models.mdx
@@ -43,42 +43,100 @@ fetch(url, { headers })
 
 <ResponseExample>
 ```json
-{
-  "success": true,
-  "data": [
-    {
-      "id": "eleven_v3",
-      "name": "Eleven Multilingual v3",
-      "description": "Latest multilingual model with improved quality",
-      "version": "3.0",
-      "languages": ["en", "es", "fr", "de", "it", "pt", "pl", "hi", "ja", "ko", "zh"],
-      "features": ["multilingual", "high_quality", "fast"],
-      "max_text_length": 5000,
-      "credits_per_second": 1
+[
+  {
+    "model_id": "eleven_v3",
+    "name": "Eleven Multilingual v3",
+    "can_be_finetuned": false,
+    "can_do_text_to_speech": true,
+    "can_do_voice_conversion": false,
+    "can_use_style": true,
+    "can_use_speaker_boost": true,
+    "serves_pro_voices": true,
+    "token_cost_factor": 1,
+    "description": "Latest multilingual model with improved quality",
+    "requires_alpha_access": false,
+    "max_characters_request_free_user": 2500,
+    "max_characters_request_subscribed_user": 5000,
+    "maximum_text_length_per_request": 5000,
+    "languages": [
+      {
+        "language_id": "en",
+        "name": "English"
+      },
+      {
+        "language_id": "es",
+        "name": "Spanish"
+      },
+      {
+        "language_id": "fr",
+        "name": "French"
+      },
+      {
+        "language_id": "de",
+        "name": "German"
+      },
+      {
+        "language_id": "it",
+        "name": "Italian"
+      },
+      {
+        "language_id": "pt",
+        "name": "Portuguese"
+      },
+      {
+        "language_id": "pl",
+        "name": "Polish"
+      },
+      {
+        "language_id": "hi",
+        "name": "Hindi"
+      },
+      {
+        "language_id": "ja",
+        "name": "Japanese"
+      },
+      {
+        "language_id": "ko",
+        "name": "Korean"
+      },
+      {
+        "language_id": "zh",
+        "name": "Chinese"
+      }
+    ],
+    "model_rates": {
+      "character_cost_multiplier": 1
     },
-    {
-      "id": "eleven_flash_v2_5",
-      "name": "Eleven Flash v2.5",
-      "description": "Fast and efficient model for quick generation",
-      "version": "2.5",
-      "languages": ["en"],
-      "features": ["fast", "efficient"],
-      "max_text_length": 2500,
-      "credits_per_second": 0.5
+    "concurrency_group": "standard"
+  },
+  {
+    "model_id": "eleven_flash_v2_5",
+    "name": "Eleven Flash v2.5",
+    "can_be_finetuned": false,
+    "can_do_text_to_speech": true,
+    "can_do_voice_conversion": false,
+    "can_use_style": false,
+    "can_use_speaker_boost": true,
+    "serves_pro_voices": false,
+    "token_cost_factor": 0.5,
+    "description": "Fast and efficient model for quick generation",
+    "requires_alpha_access": false,
+    "max_characters_request_free_user": 1000,
+    "max_characters_request_subscribed_user": 2500,
+    "maximum_text_length_per_request": 2500,
+    "languages": [
+      {
+        "language_id": "en",
+        "name": "English"
+      }
+    ],
+    "model_rates": {
+      "character_cost_multiplier": 0.5
     },
-    {
-      "id": "eleven_multilingual_v2",
-      "name": "Eleven Multilingual v2",
-      "description": "Multilingual model with good quality and speed",
-      "version": "2.0",
-      "languages": ["en", "es", "fr", "de", "it", "pt"],
-      "features": ["multilingual", "balanced"],
-      "max_text_length": 3000,
-      "credits_per_second": 0.8
-    }
-  ],
-  "message": "Models retrieved successfully"
-}
+    "concurrency_group": "fast"
+  }
+]
 ```
 </ResponseExample>
 
@@ -86,38 +144,57 @@ fetch(url, { headers })
 
 | Property | Type | Description |
 |----------|------|-------------|
-| `id` | string | Unique model identifier |
+| `model_id` | string | Unique model identifier |
 | `name` | string | Human-readable model name |
+| `can_be_finetuned` | boolean | Whether the model can be fine-tuned |
+| `can_do_text_to_speech` | boolean | Whether the model supports TTS |
+| `can_do_voice_conversion` | boolean | Whether the model supports voice conversion |
+| `can_use_style` | boolean | Whether the model supports style control |
+| `can_use_speaker_boost` | boolean | Whether the model supports speaker boost |
+| `serves_pro_voices` | boolean | Whether the model serves pro voices |
+| `token_cost_factor` | integer | Cost multiplier for token usage |
 | `description` | string | Model description |
-| `version` | string | Model version |
-| `languages` | array | Supported language codes |
-| `features` | array | Model features |
-| `max_text_length` | integer | Maximum text length in characters |
-| `credits_per_second` | float | Credits consumed per second of audio |
+| `requires_alpha_access` | boolean | Whether alpha access is required |
+| `max_characters_request_free_user` | integer | Max characters for free users |
+| `max_characters_request_subscribed_user` | integer | Max characters for subscribed users |
+| `maximum_text_length_per_request` | integer | Maximum text length per request |
+| `languages` | array | Supported languages |
+| `model_rates` | object | Model pricing information |
+| `concurrency_group` | string | Concurrency group (standard, fast, etc.) |
 
-### Language Codes
+### Language Object
 
-| Code | Language |
-|------|----------|
-| `en` | English |
-| `es` | Spanish |
-| `fr` | French |
-| `de` | German |
-| `it` | Italian |
-| `pt` | Portuguese |
-| `pl` | Polish |
-| `hi` | Hindi |
-| `ja` | Japanese |
-| `ko` | Korean |
-| `zh` | Chinese |
+| Property | Type | Description |
+|----------|------|-------------|
+| `language_id` | string | Language code (e.g., "en", "es") |
+| `name` | string | Language name (e.g., "English", "Spanish") |
 
-### Features
+### Model Rates Object
 
-| Feature | Description |
-|---------|-------------|
-| `multilingual` | Supports multiple languages |
-| `high_quality` | Optimized for quality over speed |
-| `fast` | Optimized for speed over quality |
-| `efficient` | Low resource consumption |
-| `balanced` | Good balance of quality and speed |
+| Property | Type | Description |
+|----------|------|-------------|
+| `character_cost_multiplier` | integer | Cost multiplier for character usage |
+
+### Concurrency Groups
+
+| Group | Description |
+|-------|-------------|
+| `standard` | Standard processing speed |
+| `fast` | Fast processing speed |
+| `premium` | Premium processing speed |
+
+### Model Capabilities
+
+| Capability | Description |
+|------------|-------------|
+| `can_be_finetuned` | Model can be customized with custom training |
+| `can_do_text_to_speech` | Model can convert text to speech |
+| `can_do_voice_conversion` | Model can convert between voices |
+| `can_use_style` | Model supports style control parameters |
+| `can_use_speaker_boost` | Model supports speaker boost enhancement |
+| `serves_pro_voices` | Model can use professional voice quality |
+
+### View Detailed Model Information
+
+For detailed information about each model, visit the [Models page](/docs/models) which provides comprehensive documentation about model capabilities, usage examples, and best practices.
 
