--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -56,7 +56,7 @@ X-API-KEY: your_api_key_here
 - **Text-to-Speech**: `POST /v1/text-to-speech` - Convert text to speech
 - **Models**: `GET /api/models/` - List available models
 - **Voices**: `GET /api/voices/` - List available voices
-- **History**: `GET /api/history/` - Get generation history
+- **History**: `GET /api/elevenlabs-histories/` - Get generation history
 
 ### Voice Management
 - **Create Voice**: `POST /api/voices/` - Create a new voice
